--- a/S3/webpage/index.html
+++ b/S3/webpage/index.html
@@ -35,19 +35,19 @@
             <input type="text" placeholder="0" id="numberb">
             <br>
             <br>
-            <button type="button" onclick="send();">Get Value</button>
+            <button type="button" onclick="send();">Activate Lambda</button>
         <script>
 
             function send() {
-            let numberA = document.getElementById("numbera").value;
-            let numberB = document.getElementById("numberb").value;
+            let numberA = parseInt(document.getElementById("numbera").value);
+            let numberB = parseInt(document.getElementById("numberb").value);
             let arguments = [
                 numberA,
                 numberB
             ]
 
             xmlhttp = new XMLHttpRequest();
-            xmlhttp.open("POST", "https://www.google.com", true);
+            xmlhttp.open("POST", "https://ebmyfvovq3k2a5b3oqqv34hhs40mokig.lambda-url.us-east-1.on.aws/", true);
             xmlhttp.onreadystatechange = function () { //Call a function when the state changes.
             if (xmlhttp.readyState == 4 && xmlhttp.status == 200) {
                 cb(xmlhttp.responseText);
