[ADD]: API Gate Way fix

--- a/Terraform/webpage/index.html
+++ b/Terraform/webpage/index.html
@@ -47,7 +47,7 @@
             ]
 
             xmlhttp = new XMLHttpRequest();
-            xmlhttp.open("POST", "https://i2b2mmey57w4iwp5rmqgm4cb7y0smpku.lambda-url.us-east-1.on.aws/", true);
+            xmlhttp.open("POST", " https://yqoczmins5.execute-api.us-east-1.amazonaws.com/trigger", true);
             //xmlhttp.setRequestHeader('X-Requested-With', 'XMLHttpRequest');
             //xmlhttp.setRequestHeader('Access-Control-Allow-Methods', '*');
             //xmlhttp.setRequestHeader('Access-Control-Allow-Origin', '*');
