[ADD]: URL Template

--- a/Terraform/webpage/index.html
+++ b/Terraform/webpage/index.html
@@ -47,7 +47,7 @@
             ]
 
             xmlhttp = new XMLHttpRequest();
-            xmlhttp.open("POST", "https://6ruy3crqle.execute-api.us-east-1.amazonaws.com/test/trigger", true);
+            xmlhttp.open("POST", "<ADD_AWS_API_GATEWAY_URL>", true);
             //xmlhttp.setRequestHeader('X-Requested-With', 'XMLHttpRequest');
             //xmlhttp.setRequestHeader('Access-Control-Allow-Methods', '*');
             //xmlhttp.setRequestHeader('Access-Control-Allow-Origin', '*');
